--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ psycopg2-binary==2.9.9
 alembic==1.13.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.0
 python-multipart==0.0.6
 pydantic==2.5.3
 pydantic-settings==2.1.0
