--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,7 @@ email-validator==2.1.0
 python-dateutil==2.8.2
 loguru==0.7.2
 
+# Phase 3: Infrastructure
+redis==5.0.0
+sentry-sdk[fastapi]==1.40.0
+aiosmtplib==3.0.0
