--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,9 @@ alembic==1.13.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==3.2.0
-python-multipart==0.0.6
-pydantic==2.5.3
-pydantic-settings==2.1.0
+python-multipart>=0.0.6
+pydantic>=2.9.0
+pydantic-settings>=2.4.0
 python-dotenv==1.0.0
 email-validator==2.1.0
 python-dateutil==2.8.2
