--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 sqlalchemy>=2.0.30
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.10
 alembic>=1.13.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
