--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,8 @@ python-dateutil==2.8.2
 loguru==0.7.2
 slowapi==0.1.9
 
+httpx>=0.27.0
+
 # Phase 3: Infrastructure
 redis==5.0.0
 sentry-sdk[fastapi]==1.40.0
