--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "next": "16.1.4",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
