--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,9 @@ loguru==0.7.2
 slowapi==0.1.9
 
 httpx>=0.27.0
+openai>=1.0.0
+langgraph>=0.0.10
+langchain-openai>=0.0.5
 
 # Phase 3: Infrastructure
 redis==5.0.0
