--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,13 @@ httpx>=0.27.0
 openai>=1.0.0
 langgraph>=0.0.10
 langchain-openai>=0.0.5
+langchain-community>=0.0.20
+langchain-experimental>=0.0.52
+duckduckgo-search>=5.0.0
+langgraph-checkpoint-postgres>=1.0.0
+psycopg-pool>=3.2.0
+numexpr>=2.9.0
+
 
 # Phase 3: Infrastructure
 redis==5.0.0
