feat: Implement a multi-provider LLM factory, integrate it into agents, and add configuration for OpenAI, Google, Anthropic, and Groq models, alongside new debug scripts.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,18 @@ SMTP_PASSWORD=your-app-password
 
 # Sentry (optional)
 SENTRY_DSN=
+
+# AI Provider (openai, google, anthropic, groq)
+AI_PROVIDER=openai
+# OpenAI / Groq
+OPENAI_API_KEY=your_api_key
+OPENAI_API_BASE=https://api.groq.com/openai/v1
+OPENAI_MODEL_NAME=llama-3.3-70b-versatile
+
+# Google (Gemini)
+# GOOGLE_API_KEY=your_google_key
+# GOOGLE_MODEL_NAME=gemini-1.5-flash
+
+# Anthropic (Claude)
+# ANTHROPIC_API_KEY=your_anthropic_key
+# ANTHROPIC_MODEL_NAME=claude-3-sonnet-20240229
